logs/72744.kani-mixtral.log
cpu-bind=MASK - nlpgpu04, task  0  0 [45854]: mask 0xff000000ff set
cpu-bind=MASK - nlpgpu04, task  0  0 [45876]: mask 0xff000000ff set
  File "/mnt/nlpgridio3/data/aceAttorney/kani_mixtral.py", line 7
    tokenizer = AutoTokenizer.from_pretrained("meta-llama/Meta-Llama-3-8B"
                                             ^
SyntaxError: '(' was never closed
srun: error: nlpgpu04: task 0: Exited with exit code 1
